welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: not found: value nomdelacase
while (nomdelacase != ""){
       ^BDR2:3: error: not found: value nomdelacase
nomdelacase=litMessage()
^BDR2:5: error: not found: value nomdelacase
nomdelacase  match{
^